src/objects/cond__Account_Campaign__c.object
<CustomObject>
    <description>Junction object to relate Campaigns with Clients</description>
    <fields>
        <fullName>cond__BBVA_rejection_reason_desc__c</fullName>
        <label>BBVA Discard Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>Buró</fullName>
                </value>
                <value>
                    <fullName>Requisitos</fullName>
                </value>
                <value>
                    <fullName>Criterios Admisión PyME</fullName>
                </value>
                <value>
                    <fullName>Giro</fullName>
                </value>
                <value>
                    <fullName>Capacidad de pago</fullName>
                </value>
                <value>
                    <fullName>Monto insuficiente</fullName>
                </value>
                <value>
                    <fullName>Cliente/ Apoderado con marca de CCC</fullName>
                </value>
                <value>
                    <fullName>En proceso de crédito con otra institución</fullName>
                </value>
                <value>
                    <fullName>No necesita el producto</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Client with drawn</fullName>
                    <isActive>false</isActive>
                    <label>Client with drawn</label>
                </value>
                <value>
                    <fullName>Missing deadline</fullName>
                    <isActive>false</isActive>
                    <label>Missing deadline</label>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                    <isActive>false</isActive>
                    <label>Pricing</label>
                </value>
                <value>
                    <fullName>Risk Amount Limitation</fullName>
                    <isActive>false</isActive>
                    <label>Risk Amount Limitation</label>
                </value>
                <value>
                    <fullName>Risk Structure Requirement</fullName>
                    <isActive>false</isActive>
                    <label>Risk Structure Requirement</label>
                </value>
                <value>
                    <fullName>Risk not Approved</fullName>
                    <isActive>false</isActive>
                    <label>Risk not Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPyP_Nombre_Sucursal_BPyP__c</fullName>
        <description>Este campo fórmula obtiene el nombre de la sucursal BPyP del propietario de la Campaña de Cliente.</description>
        <formula>TEXT(Owner:User.BPyP_ls_NombreSucursal__c)</formula>
        <label>Nombre Sucursal BPyP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPYP_Monto_de_exito__c</fullName>
        <description>Muestra el monto por el que se cierran  las campañas exitosas</description>
        <label>Monto de éxito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_BPYP_ProductCamp__c</fullName>
        <description>Muestra los productos de BPYP.</description>
        <formula>IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;TDC&quot;), &quot;TDC&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Producto 21&quot;), &quot;Producto 21&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Cuenta en Dólares&quot;), &quot;Cuenta en Dólares&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Fondos de Inversión&quot;), &quot;Fondos de Inversión&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Membresía BP&quot;), &quot;Membresía BP&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Nómina&quot;), &quot;Nómina&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Maestra Patrimonial Dólares&quot;), &quot;Maestra Patrimonial Dólares&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Portabilidad&quot;), &quot;Portabilidad&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;MLB&quot;), &quot;MLB&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Auto&quot;), &quot;Auto&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Consumo&quot;), &quot;Consumo&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Hipotecario&quot;), &quot;Hipotecario&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;PrePaid Forward&quot;), &quot;PrePaid Forward&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Collares&quot;), &quot;Collares&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Alertas&quot;), &quot;Alertas&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Digital&quot;), &quot;Digital&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Domiciliaciones&quot;), &quot;Domiciliaciones&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Servicios No Financieros &quot;), &quot;Servicios No Financieros &quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Traspaso Patrimonial&quot;), &quot;Traspaso Patrimonial&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Auto Seguro&quot;), &quot;Auto Seguro&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Gastos Médicos Mayores Indemnizatorio&quot;), &quot;Gastos Médicos Mayores Indemnizatorio&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Hogar Seguro Plus&quot;), &quot;Hogar Seguro Plus&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Vida Segura Patrimonial&quot;), &quot;Vida Segura Patrimonial&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Meta Segura&quot;), &quot;Meta Segura&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Fideicomiso&quot;), &quot;Fideicomiso&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Ahorro Liquido&quot;),&quot;Ahorro Liquido&quot;,NULL)</formula>
        <label>Productos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_BPYP_ProductosPyme__c</fullName>
        <description>Muestra los productos de Pyme.</description>
        <formula>IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Crédito Líquido PyME&quot;), &quot;Crédito Líquido PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Crédito Simple PyME&quot;), &quot;Crédito Simple PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Tarjeta de Negocios&quot;), &quot;Tarjeta de Negocios&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Tarjeta Empresarial&quot;), &quot;Tarjeta Empresarial&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Tarjetas de Crédito PyME&quot;), &quot;Tarjetas de Crédito PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Cuenta Maestra PyME MN&quot;), &quot;Cuenta Maestra PyME MN&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Fondo PFAE&quot;), &quot;Fondo PFAE&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Pagare Negocios&quot;), &quot;Pagare Negocios&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;CIE PyME&quot;), &quot;CIE PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Banca Electrónica PyME&quot;), &quot;Banca Electrónica PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Vista PyME&quot;), &quot;Vista PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Auto Seguro Empresa&quot;), &quot;Auto Seguro Empresa&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Vida Seguro Empresa&quot;), &quot;Vida Seguro Empresa&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Seguro Crédito PyME&quot;), &quot;Seguro Crédito PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c, &quot;Empresa Segura&quot;),  &quot;Empresa Segura&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Domiciliación PyME&quot;), &quot;Domiciliación PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Cartas de Crédito PyME&quot;), &quot;Cartas de Crédito PyME&quot;,NULL)+ 
IF(INCLUDES(cond__campaign_id__r.MX_PYME_Productos__c,&quot;Inversiones PyME&quot;), &quot;Inversiones PyME&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productos Pyme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Campania_Especial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaña Especial</label>
        <type>TextArea</type>
    </fields>
     <fields>
        <fullName>MX_PYME_Campania_Especial2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaña Especial2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_PYME_DescLarga__c</fullName>
        <description>Descripción larga de campo de campañas</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción Larga</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Estado_CRM__c</fullName>
        <label>Estado CRM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>Estado Inicial</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>Cuenta digital</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>Rechazo</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>Preformalizado</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>Formalizado</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>FIN DE CAMPANIA</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>ESTATUS 0008</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>ESTATUS 0009</label>
                </value>
                <value>
                    <fullName>0010</fullName>
                    <label>LATENTE</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>ESTATUS 0011</label>
                </value>
                <value>
                    <fullName>0012</fullName>
                    <label>ESTATUS 0012</label>
                </value>
                <value>
                    <fullName>0013</fullName>
                    <label>ESTATUS 0013</label>
                </value>
                <value>
                    <fullName>0014</fullName>
                    <label>ESTATUS 0014</label>
                </value>
                <value>
                    <fullName>0015</fullName>
                    <label>ESTATUS 0015</label>
                </value>
                <value>
                    <fullName>0016</fullName>
                    <label>ESTATUS 0016</label>
                </value>
                <value>
                    <fullName>0017</fullName>
                    <label>ESTATUS 0017</label>
                </value>
                <value>
                    <fullName>0018</fullName>
                    <label>ESTATUS 0018</label>
                </value>
                <value>
                    <fullName>0019</fullName>
                    <label>ESTATUS 0019</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>OFERTA</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>ESTATUS 0021</label>
                </value>
                <value>
                    <fullName>0022</fullName>
                    <label>ESTATUS 0022</label>
                </value>
                <value>
                    <fullName>0023</fullName>
                    <label>ESTATUS 0023</label>
                </value>
                <value>
                    <fullName>0024</fullName>
                    <label>ESTATUS 0024</label>
                </value>
                <value>
                    <fullName>0025</fullName>
                    <label>ESTATUS 0025</label>
                </value>
                <value>
                    <fullName>0026</fullName>
                    <label>ESTATUS 0026</label>
                </value>
                <value>
                    <fullName>0027</fullName>
                    <label>ESTATUS 0027</label>
                </value>
                <value>
                    <fullName>0028</fullName>
                    <label>ESTATUS 0028</label>
                </value>
                <value>
                    <fullName>0029</fullName>
                    <label>ESTATUS 0029</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>EN PROCESO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PYME_Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PYME_RelOpp__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Numero de oportunidades relacionadas con la campaña del Cliente</description>
        <label>Oportunidades Relacionadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que indica que el éxito de la campaña</description>
        <label>Marca de éxito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PYME_TipoCamp__c</fullName>
        <label>Tipo de campaña</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Informativa</fullName>
                </value>
                <value>
                    <fullName>Venta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_BPYP_Campa_as_cliente_de_mi_equipo__c</fullName>
        <description>Se compara el usuario que ve en ese momento el registro y hace un check en la casilla de verificación si pertenece a la misma oficina.</description>
        <formula>Owner:User.CR__c   =  $User.CR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campañas del cliente de mi equipo</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Campaign</label>
    <listViews>
        <fullName>MX_BPYP_Mis_Campanias</fullName>
        <columns>NAME</columns>
        <columns>cond__priority_campaign_type__c</columns>
        <columns>cond__campaign_start_date__c</columns>
        <columns>cond__campaign_end_date__c</columns>
        <columns>cond__solution_category_type__c</columns>
        <columns>cond__solution_category_name__c</columns>
        <columns>MX_PYME_Importe__c</columns>
        <columns>cond__data_source_name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Campañas</label>
        <sharedTo>
            <role>BPYP_BANQUERO_ACAPULCO</role>
            <role>BPYP_BANQUERO_AGUASCALIENTES</role>
            <role>BPYP_BANQUERO_ANDARES</role>
            <role>BPYP_BANQUERO_BANCA_ACOXPA</role>
            <role>BPYP_BANQUERO_BANCA_DEL_VALLE</role>
            <role>BPYP_BANQUERO_BANCA_PERISUR</role>
            <role>BPYP_BANQUERO_CANCUN</role>
            <role>BPYP_BANQUERO_CD_JUAREZ</role>
            <role>BPYP_BANQUERO_CD_OBREGON</role>
            <role>BPYP_BANQUERO_CELAYA</role>
            <role>BPYP_BANQUERO_CHIHUAHUA</role>
            <role>BPYP_BANQUERO_COATZACOALCOS</role>
            <role>BPYP_BANQUERO_COLIMA</role>
            <role>BPYP_BANQUERO_CUERNAVACA</role>
            <role>BPYP_BANQUERO_CULIACAN</role>
            <role>BPYP_BANQUERO_CUMBRES</role>
            <role>BPYP_BANQUERO_DURANGO</role>
            <role>BPYP_BANQUERO_GUADALAJARA_TERRANOVA</role>
            <role>BPYP_BANQUERO_HERMOSILLO</role>
            <role>BPYP_BANQUERO_INTERLOMAS</role>
            <role>BPYP_BANQUERO_IRAPUATO</role>
            <role>BPYP_BANQUERO_LEON</role>
            <role>BPYP_BANQUERO_LILAS</role>
            <role>BPYP_BANQUERO_LOMAS</role>
            <role>BPYP_BANQUERO_LOMAS_VERDES</role>
            <role>BPYP_BANQUERO_LOS_CABOS</role>
            <role>BPYP_BANQUERO_MANACAR</role>
            <role>BPYP_BANQUERO_MAZARIK</role>
            <role>BPYP_BANQUERO_MAZATLAN</role>
            <role>BPYP_BANQUERO_MERIDA</role>
            <role>BPYP_BANQUERO_MEXICALI</role>
            <role>BPYP_BANQUERO_MONTERREY_COUNTRY</role>
            <role>BPYP_BANQUERO_MONTERREY_VALLE_SENA</role>
            <role>BPYP_BANQUERO_MORELIA</role>
            <role>BPYP_BANQUERO_MOROLEON</role>
            <role>BPYP_BANQUERO_OAXACA</role>
            <role>BPYP_BANQUERO_PACHUCA</role>
            <role>BPYP_BANQUERO_PASEOS_CHURUBUSCO</role>
            <role>BPYP_BANQUERO_PEDREGAL</role>
            <role>BPYP_BANQUERO_PLAZA_FORUM</role>
            <role>BPYP_BANQUERO_PRIVADO_y_UHN_LOMAS</role>
            <role>BPYP_BANQUERO_PUEBLA</role>
            <role>BPYP_BANQUERO_QUERETARO</role>
            <role>BPYP_BANQUERO_REYNOSA</role>
            <role>BPYP_BANQUERO_SALTILLO</role>
            <role>BPYP_BANQUERO_SAN_LUIS_POTOSI</role>
            <role>BPYP_BANQUERO_SATELITE</role>
            <role>BPYP_BANQUERO_TAMPICO</role>
            <role>BPYP_BANQUERO_TEPATITLAN</role>
            <role>BPYP_BANQUERO_TEPIC</role>
            <role>BPYP_BANQUERO_TIJUANA</role>
            <role>BPYP_BANQUERO_TOLUCA</role>
            <role>BPYP_BANQUERO_TORREON</role>
            <role>BPYP_BANQUERO_TORRE_BANCOMER</role>
            <role>BPYP_BANQUERO_TUXTLA_GUTIERREZ</role>
            <role>BPYP_BANQUERO_UHN_GUADALAJARA</role>
            <role>BPYP_BANQUERO_UHN_MEXICO</role>
            <role>BPYP_BANQUERO_UHN_MONTERREY</role>
            <role>BPYP_BANQUERO_URUAPAN</role>
            <role>BPYP_BANQUERO_VERACRUZ</role>
            <role>BPYP_BANQUERO_VILLAHERMOSA</role>
            <role>BPYP_BANQUERO_VITO_ALESSIO</role>
            <role>BPYP_BANQUERO_XALAPA</role>
            <role>BPYP_BANQUERO_ZACATECAS</role>
            <role>BPYP_BANQUERO_ZAMORA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_BPYP_Todas_las_campa_as_de_clientes</fullName>
        <columns>NAME</columns>
        <columns>cond__participant_id__c</columns>
        <columns>cond__priority_campaign_type__c</columns>
        <columns>cond__campaign_start_date__c</columns>
        <columns>cond__campaign_end_date__c</columns>
        <columns>cond__solution_category_type__c</columns>
        <columns>cond__solution_category_name__c</columns>
        <columns>MX_PYME_Importe__c</columns>
        <columns>cond__data_source_name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_BPYP_Campa_as_cliente_de_mi_equipo__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Todas las campañas de clientes</label>
        <sharedTo>
            <role>BPYP_DIRECTOR_OFICINA_ACAPULCO</role>
            <role>BPYP_DIRECTOR_OFICINA_AGUASCALIENTES</role>
            <role>BPYP_DIRECTOR_OFICINA_ANDARES</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_ACOXPA</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_DEL_VALLE</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_PERISUR</role>
            <role>BPYP_DIRECTOR_OFICINA_BANCA_PLAZA_FORUM</role>
            <role>BPYP_DIRECTOR_OFICINA_CANCUN</role>
            <role>BPYP_DIRECTOR_OFICINA_CD_JUAREZ</role>
            <role>BPYP_DIRECTOR_OFICINA_CD_OBREGON</role>
            <role>BPYP_DIRECTOR_OFICINA_CELAYA</role>
            <role>BPYP_DIRECTOR_OFICINA_CHIHUAHUA</role>
            <role>BPYP_DIRECTOR_OFICINA_COATZACOALCOS</role>
            <role>BPYP_DIRECTOR_OFICINA_COLIMA</role>
            <role>BPYP_DIRECTOR_OFICINA_CUERNAVACA</role>
            <role>BPYP_DIRECTOR_OFICINA_CULIACAN</role>
            <role>BPYP_DIRECTOR_OFICINA_CUMBRES</role>
            <role>BPYP_DIRECTOR_OFICINA_DURANGO</role>
            <role>BPYP_DIRECTOR_OFICINA_GUADALAJARA_TERRANOVA</role>
            <role>BPYP_DIRECTOR_OFICINA_HERMOSILLO</role>
            <role>BPYP_DIRECTOR_OFICINA_INTERLOMAS</role>
            <role>BPYP_DIRECTOR_OFICINA_IRAPUATO</role>
            <role>BPYP_DIRECTOR_OFICINA_LEON</role>
            <role>BPYP_DIRECTOR_OFICINA_LILAS</role>
            <role>BPYP_DIRECTOR_OFICINA_LOMAS</role>
            <role>BPYP_DIRECTOR_OFICINA_LOMAS1</role>
            <role>BPYP_DIRECTOR_OFICINA_LOMAS_VERDES</role>
            <role>BPYP_DIRECTOR_OFICINA_LOS_CABOS</role>
            <role>BPYP_DIRECTOR_OFICINA_MANACAR</role>
            <role>BPYP_DIRECTOR_OFICINA_MAZARIK</role>
            <role>BPYP_DIRECTOR_OFICINA_MAZATLAN</role>
            <role>BPYP_DIRECTOR_OFICINA_MERIDA</role>
            <role>BPYP_DIRECTOR_OFICINA_MEXICALI</role>
            <role>BPYP_DIRECTOR_OFICINA_MONTERREY_COUNTRY</role>
            <role>BPYP_DIRECTOR_OFICINA_MONTERREY_VALLE_SENA</role>
            <role>BPYP_DIRECTOR_OFICINA_MORELIA</role>
            <role>BPYP_DIRECTOR_OFICINA_MOROLEON</role>
            <role>BPYP_DIRECTOR_OFICINA_OAXACA</role>
            <role>BPYP_DIRECTOR_OFICINA_PACHUCA</role>
            <role>BPYP_DIRECTOR_OFICINA_PASEOS_CHURUBUSCO</role>
            <role>BPYP_DIRECTOR_OFICINA_PEDREGAL</role>
            <role>BPYP_DIRECTOR_OFICINA_PUEBLA</role>
            <role>BPYP_DIRECTOR_OFICINA_QUERETARO</role>
            <role>BPYP_DIRECTOR_OFICINA_REYNOSA</role>
            <role>BPYP_DIRECTOR_OFICINA_SALTILLO</role>
            <role>BPYP_DIRECTOR_OFICINA_SAN_LUIS_POTOSI</role>
            <role>BPYP_DIRECTOR_OFICINA_SATELITE</role>
            <role>BPYP_DIRECTOR_OFICINA_TAMPICO</role>
            <role>BPYP_DIRECTOR_OFICINA_TEPATITLAN</role>
            <role>BPYP_DIRECTOR_OFICINA_TEPIC</role>
            <role>BPYP_DIRECTOR_OFICINA_TIJUANA</role>
            <role>BPYP_DIRECTOR_OFICINA_TOLUCA</role>
            <role>BPYP_DIRECTOR_OFICINA_TORREON</role>
            <role>BPYP_DIRECTOR_OFICINA_TORRE_BANCOMER</role>
            <role>BPYP_DIRECTOR_OFICINA_TUXTLA_GUTIERREZ</role>
            <role>BPYP_DIRECTOR_OFICINA_UHN_GUADALAJARA</role>
            <role>BPYP_DIRECTOR_OFICINA_UHN_MEXICO</role>
            <role>BPYP_DIRECTOR_OFICINA_UHN_MONTERREY</role>
            <role>BPYP_DIRECTOR_OFICINA_URUAPAN</role>
            <role>BPYP_DIRECTOR_OFICINA_VERACRUZ</role>
            <role>BPYP_DIRECTOR_OFICINA_VILLAHERMOSA</role>
            <role>BPYP_DIRECTOR_OFICINA_VITO_ALESSIO</role>
            <role>BPYP_DIRECTOR_OFICINA_XALAPA</role>
            <role>BPYP_DIRECTOR_OFICINA_ZACATECAS</role>
            <role>BPYP_DIRECTOR_OFICINA_ZAMORA</role>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Campaigns</pluralLabel>
    <recordTypes>
        <fullName>MX_PYME_CampValiProd</fullName>
        <active>true</active>
        <description>Campañas validadas con productos</description>
        <label>Campaña Validada con Producto</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_PYME_Campania_Cargada</fullName>
        <active>true</active>
        <label>Campaña Cargada</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_PYME_Campania_CargadaPrd</fullName>
        <active>true</active>
        <label>Campaña con Productos</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_PYME_ValAccCamp</fullName>
        <active>true</active>
        <description>Campaña PYME Validada</description>
        <label>Campaña Validada</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>